JWT authentication and related configurations have been added, controllers and application settings have been updated
